# tetris

./: .gitignore  CMakeLists.txt  Tetris.pro  apiclient.cpp  apiclient.h  mainwindow.cpp  mainwindow.h  menuwidget.h  tetris.desktop  tetriswidget.cpp  tetriswidget.h  tetromino.cpp  tetromino.h
.github/workflows/: build.yml
